syntax = "proto3";

message c2c_send_request_proto {
  int32 messageType = 1;
  string from = 2;
  string to = 3;
  int64 preId = 4;
  int64 cId = 5;
  string content = 6;
}

message c2c_send_response_proto {
  int32 messageType = 1;
  string from = 2;
  string to = 3;
  int64 ackId = 4;
}

message login_proto {
  int32 messageType = 1;
  string useId = 2;
}

message logout_proto {
  int32 messageType = 1;
  string useId = 2;
}

message pull_notice_proto{
  int32 messageType = 1;
  string useId = 2;
}

message pull_request_proto{
  int32 messageType = 1;
  string useId = 2;
  int64  maxMsgId = 3;
}

message pull_response_proto{
  int32 messageType = 1;
  string useId = 2;
  repeated msg_proto msgs = 3;
}

message msg_proto{
  string fromId = 4;
  string toId = 5;
  string msgType = 6;
  string groupId = 7;
  int64 msgId = 8;
  string content = 9;
}
